# geometric-constraint-playground

./: LICENSE  README.md  derivative_deriver.py  pyproject.toml
docs/: design-doc.md
scratch/: system_partitioning.py
src/: example.py
src/newton/: backend.py  constants.py  constraint_validator.py  constraints.py  exceptions.py  logging_config.py  matrix_utils.py  preprocessor.py  primitives.py  residuals.py  solver.py  solver_base.py  solver_dense.py  solver_sparse.py  structural_analyzer.py  symbolic_substitution.py
src/newton/ports/: newton_faer.py
src/tests/: test_common_vertex.py  test_matrix_utils.py  test_solver.py  test_substitution.py
